# Passknight

./: .gitignore  LICENSE  README.md
android/: README.md  build.gradle.kts  settings.gradle.kts
android/app/: .gitignore  build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  pkcryptonative.cpp
android/gradle/wrapper/: gradle-wrapper.properties
extension/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
extension/public/: background.js  base64.js  content.js  manifest.json
extension/public/workers/: crypto.js  service_worker.js
extension/src/: App.scss  App.tsx  index.scss  main.tsx
extension/src/hooks/: useCrypto.ts
extension/src/lib/: base64.ts  crypto.ts  extension.ts  firebase.ts  firebaseConfig.js  generator.ts  interfaces.ts  itemConverters.ts  itemUtils.ts  time.ts  types.ts
windows/: .gitignore  Passknight.sln  README.md
windows/Passknight/: App.xaml  App.xaml.cs  Extensions.cs  MainWindow.xaml  MainWindow.xaml.cs  Passknight.csproj
windows/Passknight/Converters/: CapitalizeConverter.cs  DecryptorConverter.cs  ErrorVisibilityConverter.cs  GeneratedPasswordConverter.cs  GeneratedPasswordStyleConverter.cs  GeneratorPasswordStyleConverter.cs  ItemWebsiteIconConverter.cs  TimestampConverter.cs
windows/Passknight/Core/: IVault.cs  ObservableObject.cs  RelayCommand.cs  ViewModel.cs
windows/Passknight/Models/: ErrorInputField.cs  IDatabase.cs  ItemForm.cs  Items.cs  Vault.cs  VaultContent.cs
windows/Passknight/Resources/: Logo.xaml  NoteIcon.xaml
windows/Passknight/Services/: Msgbox.cs  (+5 more)
(+157 files in other folders)
